syntax = "proto3";

package calculator;

service CalculatorService {
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}

message SquareRootRequest {
    int32 number = 1;
}

message SquareRootResponse {
    double number_root = 1;
}