syntax = "proto3";

package greet;

service GreetingService {
    // Unary API
    rpc Greet(GreetRequest) returns (GreetResponse) {};
    // Server stream API
    rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};
    // Client stream API
    rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};
    // Bi-directional streaming API
    rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {};
}

message GreetEveryoneResponse {
    string result = 1;
}

message GreetEveryoneRequest {
    Greeting greeting = 1;
}

message LongGreetResponse {
    string result = 1;
}

message LongGreetRequest {
    Greeting greeting = 1;
}

message GreetManyTimesResponse {
    string result = 1;
}

message GreetManyTimesRequest {
    Greeting greeting = 1;
}

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string result = 1;
}